--- a/LoanAgreement/LoanAgreement/LoanAgreementView.csproj
+++ b/LoanAgreement/LoanAgreement/LoanAgreementView.csproj
@@ -189,6 +189,12 @@
     <Compile Include="FormMain.Designer.cs">
       <DependentUpon>FormMain.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormOperations.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormOperations.Designer.cs">
+      <DependentUpon>FormOperations.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="FormAgent.resx">
@@ -211,6 +217,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormMain.resx">
       <DependentUpon>FormMain.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormOperations.resx">
+      <DependentUpon>FormOperations.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
