--- a/LoanAgreement/LoanAgreement/LoanAgreementView.csproj
+++ b/LoanAgreement/LoanAgreement/LoanAgreementView.csproj
@@ -195,6 +195,12 @@
     <Compile Include="FormOperations.Designer.cs">
       <DependentUpon>FormOperations.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormPostingJournal.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormPostingJournal.Designer.cs">
+      <DependentUpon>FormPostingJournal.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="FormAgent.resx">
@@ -220,6 +226,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormOperations.resx">
       <DependentUpon>FormOperations.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormPostingJournal.resx">
+      <DependentUpon>FormPostingJournal.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
