--- a/LoanAgreement/LoanAgreement/LoanAgreementView.csproj
+++ b/LoanAgreement/LoanAgreement/LoanAgreementView.csproj
@@ -229,6 +229,12 @@
     <Compile Include="FormReportCosts.Designer.cs">
       <DependentUpon>FormReportCosts.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormReportPostingJournal.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormReportPostingJournal.Designer.cs">
+      <DependentUpon>FormReportPostingJournal.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormReportSums.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -268,6 +274,9 @@
     <EmbeddedResource Include="FormReportCosts.resx">
       <DependentUpon>FormReportCosts.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="FormReportPostingJournal.resx">
+      <DependentUpon>FormReportPostingJournal.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FormReportSums.resx">
       <DependentUpon>FormReportSums.cs</DependentUpon>
     </EmbeddedResource>
@@ -281,9 +290,11 @@
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
     <EmbeddedResource Include="ReportCosts.rdlc" />
+    <EmbeddedResource Include="ReportPostingJournal.rdlc" />
     <EmbeddedResource Include="ReportSums.rdlc" />
     <None Include="packages.config" />
     <None Include="Properties\DataSources\LoanAgreementBusinessLogic.ViewModels.ReportCostsViewModel.datasource" />
+    <None Include="Properties\DataSources\LoanAgreementBusinessLogic.ViewModels.ReportPostingJournalViewModel.datasource" />
     <None Include="Properties\DataSources\LoanAgreementBusinessLogic.ViewModels.ReportSumsViewModel.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
