--- a/LoanAgreement/LoanAgreement/packages.config
+++ b/LoanAgreement/LoanAgreement/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="DocumentFormat.OpenXml" version="2.14.0" targetFramework="net472" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.1" targetFramework="net472" />
   <package id="Microsoft.Bcl.HashCode" version="1.1.1" targetFramework="net472" />
   <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net472" />
@@ -23,6 +24,7 @@
   <package id="Microsoft.Report.Viewer" version="11.0.0.0" targetFramework="net472" />
   <package id="Microsoft.ReportingServices.ReportViewerControl.Winforms" version="150.1440.0" targetFramework="net472" />
   <package id="Microsoft.SqlServer.Types" version="14.0.314.76" targetFramework="net472" />
+  <package id="NLog" version="4.7.12" targetFramework="net472" />
   <package id="Npgsql" version="4.1.9" targetFramework="net472" />
   <package id="Npgsql.EntityFrameworkCore.PostgreSQL" version="3.1.18" targetFramework="net472" />
   <package id="PDFsharp-MigraDoc" version="1.50.5147" targetFramework="net472" />
