--- a/LoanAgreement/LoanAgreementBusinessLogic/LoanAgreementBusinessLogic.csproj
+++ b/LoanAgreement/LoanAgreementBusinessLogic/LoanAgreementBusinessLogic.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="DocumentFormat.OpenXml" Version="2.14.0" />
     <PackageReference Include="PDFsharp-MigraDoc" Version="1.50.5147" />
   </ItemGroup>
 
