--- a/LoanAgreement/LoanAgreement/App.config
+++ b/LoanAgreement/LoanAgreement/App.config
@@ -8,8 +8,8 @@
     </startup>
 	<nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" throwExceptions="true">
 		<targets>
-			<target name="logfileInfo" xsi:type="File" fileName="C://Logs//ActionLog.txt" />
-			<target name="logfileErrors" xsi:type="File"  layout="${uppercase:${level}}|${logger}|${message}|${date:format=dd\.MM\.yyyy}" fileName="C://Logs//ActionLog.txt" />
+			<target name="logfileInfo" xsi:type="File" fileName="C://Logs//ActionLog ${date:format=dd\.MM\.yyyy}.txt" />
+			<target name="logfileErrors" xsi:type="File"  layout="${uppercase:${level}}|${logger}|${message}|${date:format=dd\.MM\.yyyy}" fileName="C://Logs//ActionLog ${date:format=dd\.MM\.yyyy}.txt" />
 		</targets>
 		<rules>
 			<logger name="*" level="Info" writeTo="logfileInfo" />
